2013-07-02  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/testvarious, nad/tv_out.dist: add new robinson forward test,
	and backwards tests.

	* src/PJ_robin.c: Applied new coefficients supplied by Ed Campbell
	pretty much on faith. (#113)

2013-06-26  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_open_lib.c: change filename and access args to const.

2013-06-25  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/Makefile.am: add CH to pkgdata_DATA (#145).

	* src/PJ_putp3.c: Fix putp3p usage line to remove "no inv" (#167).

	* src/PJ_aitoff.c: note that aitoff and wintri projections have no
	inverse (#160, #168).

	* src/PJ_urm5.c: Note that there is no inverse, fix spelling of alpha
	in the short description (#169).

	* src/pj_ell_set.c: Ensure thread context is forwarded.

	* src/multistresstest.c: add windows support (#199)

	* src/pj_ctx.c: avoid race condition on setting of 
	default_context_initialized. (#199)

	* config.guess, config.sub: updated to newer versions (#208).

	* src/proj.def: add pj_get_spheroid_defn to proj.def. (#214)

	* install-sh: upgrade to support multiple files (#217)

2013-06-24  Frank Warmerdam  <warmerdam@pobox.com>

	* src/projects.h, src/proj_api.h: move pj_open_lib() into proj_api.h.

	* src/projects.h: Do not define PROJ_LIB to "PROJ_LIB".

2013-06-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing for 4.9.0 beta release.

	* src/geodesic.{c,h}: sync relative to GeographicLib 1.31. (#216)

	* src/pj_fileapi.c, etc: Implement a virtual file api accessable
	through the context for init file and grid shift file access.

	* src/mk_cheby.c: reformat, add braces to avoid warnings.

2013-06-19  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_healpix.c: correct various warnings about unused variables.

2013-06-19  Frank Warmerdam  <warmerdam@google.com>

	* src/pj_mutex.c, configure.in: Ensure that the core mutex lock
	is created in recursive mode.  Results in -lpthread being required.
