@@ -193,3 +193,12 @@ Test pconic (#148)
 ##############################################################
 Test laea
 -6086629.0 4488761.0	156.05863798859943	37.76545829867844 0.00000000000000
+##############################################################
+Test forward calcofi projection
+120d40'42.273"W	38d56'50.766"N	60.00	20.00 0.00
+121d9'W	34d9'N	80.00	60.00 0.00
+123d59'56.066"W	30d25'4.617"N	90.00	120.00 0.00
+Test inverse calcofi projection
+60 20	120d40'42.273"W	38d56'50.766"N 0.000
+80 60	121d9'W	34d9'N 0.000 
+90 120	123d59'56.066"W	30d25'4.617"N 0.000
