@@ -1,3 +1,8 @@
+2013-07-08  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/PJ_calcofi.c: Add Cal Coop Ocean Fish Invest Lines/Stations
+	projections (calcofi) (#135)
+
 2013-07-02  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* nad/testvarious, nad/tv_out.dist: add new robinson forward test,
